Add : icon with menu

--- a/VignobleWEB/Pages/Shared/_Layout.cshtml
+++ b/VignobleWEB/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,14 +20,19 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Accueil</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Article</a>
                         </li>
                     </ul>
-                    <img class="litlesize" src="img/basket.png"/>
-                    <img class="litlesize" src="img/user.png"/>
+                    <img class="litlesize" src="img/basket.png" /> 
+                </div>
+                <div class="conteneur">
+                    <img class="litlesize Image" src="img/user.png" alt="Image" />
+                    <div class="menu">
+                        <ul>
+                            <li><a href="#">Se connecter</a></li>
+                            <li><a href="#">Créer un compte</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -47,7 +52,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
+    
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
