--- a/VignobleWEB/Pages/Index.cshtml
+++ b/VignobleWEB/Pages/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Accueil";
 }
 
 <div class="text-center">
     <h1 class="display-4">Bienvenue ! </h1>
-    <p>Page d'accueil, description du site'.</p>
+    <p>Page d'accueil, description du site.</p>
 </div>
