--- a/VignobleWEB/Pages/Shared/_Layout.cshtml
+++ b/VignobleWEB/Pages/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Article</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="Articles/Articles">Article</a>
                         </li>
                     </ul>
                     <img class="litlesize" src="img/basket.png" /> 
