--- a/VignobleWEB/Pages/Articles/Articles.cshtml
+++ b/VignobleWEB/Pages/Articles/Articles.cshtml
@@ -15,11 +15,11 @@
                             <div class="card-body">
                                 <div class="clearfix mb-3">
                                     <span class="float-start badge rounded-pill bg-success">@item.UnitPrice &euro;</span>
-                                    <span class="float-end"><a href="#">Example</a></span>
                                 </div>
-                                <h5 class="card-title">@item.Description</h5>
+                                <h4 class="card-title">@item.Name</h4>
+                                <h5 class="card-text">@item.Description</h5>
                                 <div class="d-grid gap-2 my-4">
-                                    <a href="#" class="btn btn-warning">Check offer</a>
+                                    <a href="#" class="btn btn-warning">Plus d'info</a>
                                 </div>
                             </div>
                         </div>
@@ -30,8 +30,8 @@
     }
     else
     {
-         <strong>
+        <strong>
             Aucun article ne correspond à vos critères de recherche
-        </strong>
+        </strong>   
     }
 }
