Add page (front)

--- a/VignobleWEB/Pages/Shared/_Layout.cshtml
+++ b/VignobleWEB/Pages/Shared/_Layout.cshtml
@@ -29,8 +29,8 @@
                     <img class="litlesize Image" src="img/user.png" alt="Image" />
                     <div class="menu">
                         <ul>
-                            <li><a href="#">Se connecter</a></li>
-                            <li><a href="#">Créer un compte</a></li>
+                            <li><a asp-area="" asp-page="Login/SignIn">Se connecter</a></li>
+                            <li><a asp-area="" asp-page="Login/SignUp">Créer un compte</a></li>
                         </ul>
                     </div>
                 </div>
