--- a/VignobleWEB/Pages/Login/SignUp.cshtml
+++ b/VignobleWEB/Pages/Login/SignUp.cshtml
@@ -7,17 +7,17 @@
 
     <div class="container">
         <form class="form-horizontal" role="form">
-            <h2>Registration</h2>
+            <h2>Création de compte</h2>
             <div class="form-group">
-                <label for="firstName" class="col-sm-3 control-label">First Name</label>
+                <label for="firstName" class="col-sm-3 control-label">Prénom</label>
                 <div class="col-sm-9">
-                    <input type="text" id="firstName" placeholder="First Name" class="form-control" autofocus>
+                    <input type="text" id="firstName" placeholder="Prénom" class="form-control" autofocus>
                 </div>
             </div>
             <div class="form-group">
-                <label for="lastName" class="col-sm-3 control-label">Last Name</label>
+                <label for="lastName" class="col-sm-3 control-label">Nom</label>
                 <div class="col-sm-9">
-                    <input type="text" id="lastName" placeholder="Last Name" class="form-control" autofocus>
+                    <input type="text" id="lastName" placeholder="Nom" class="form-control" autofocus>
                 </div>
             </div>
             <div class="form-group">
@@ -27,65 +27,76 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="password" class="col-sm-3 control-label">Password*</label>
+                <label for="password" class="col-sm-3 control-label">Mot de passe*</label>
                 <div class="col-sm-9">
-                    <input type="password" id="password" placeholder="Password" class="form-control">
+                    <input type="password" id="password" placeholder="Mot de passe" class="form-control">
                 </div>
             </div>
             <div class="form-group">
-                <label for="password" class="col-sm-3 control-label">Confirm Password*</label>
+                <label for="password" class="col-sm-6 control-label">Confirmer le mot de passe*</label>
                 <div class="col-sm-9">
-                    <input type="password" id="password" placeholder="Password" class="form-control">
+                    <input type="password" id="password" placeholder="Mot de passe" class="form-control">
                 </div>
             </div>
             <div class="form-group">
-                <label for="birthDate" class="col-sm-3 control-label">Date of Birth*</label>
+                <label for="birthDate" class="col-sm-3 control-label">Anniversaire*</label>
                 <div class="col-sm-9">
                     <input type="date" id="birthDate" class="form-control">
                 </div>
             </div>
             <div class="form-group">
-                <label for="phoneNumber" class="col-sm-3 control-label">Phone number </label>
+                <label for="phoneNumber" class="col-sm-3 control-label">Téléphone </label>
                 <div class="col-sm-9">
-                    <input type="phoneNumber" id="phoneNumber" placeholder="Phone number" class="form-control">
-                    <span class="help-block">Your phone number won't be disclosed anywhere </span>
+                    <input type="phoneNumber" id="phoneNumber" placeholder="Téléphone" class="form-control">
+                    <span class="help-block">Votre numéro de téléphone ne sera pas divulgé </span>
                 </div>
             </div>
             <div class="form-group">
-                <label for="Height" class="col-sm-3 control-label">Height* </label>
+                <label for="Height" class="col-sm-3 control-label">adresse* </label>
                 <div class="col-sm-9">
-                    <input type="number" id="height" placeholder="Please write your height in centimetres" class="form-control">
+                    <input type="text" id="adresse" placeholder="Veuillez entrer une adresse" class="form-control">
                 </div>
             </div>
             <div class="form-group">
-                <label for="weight" class="col-sm-3 control-label">Weight* </label>
+                <label for="ville" class="col-sm-3 control-label">Ville* </label>
                 <div class="col-sm-9">
-                    <input type="number" id="weight" placeholder="Please write your weight in kilograms" class="form-control">
+                    <input type="text" id="ville" placeholder="Ville" class="form-control" name="Ville">
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-3">Gender</label>
+                <label for="codepostal" class="col-sm-3 control-label">code postal* </label>
+                <div class="col-sm-9">
+                    <input type="text" id="codepostal" placeholder="code postal" class="form-control">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-3">Genre</label>
                 <div class="col-sm-6">
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-sm-5">
                             <label class="radio-inline">
-                                <input type="radio" id="femaleRadio" value="Female">Female
+                                <input type="radio" id="femaleRadio" value="Female">Femme
                             </label>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-5">
                             <label class="radio-inline">
-                                <input type="radio" id="maleRadio" value="Male">Male
+                                <input type="radio" id="maleRadio" value="Male">Homme
                             </label>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="form-group">
+                <label>
+                    <input type="checkbox" id="acceptRules"> 
+                </label>
             </div> <!-- /.form-group -->
             <div class="form-group">
                 <div class="col-sm-9 col-sm-offset-3">
-                    <span class="help-block">*Required fields</span>
+                    <span class="help-block">*Champs requis</span>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Register</button>
+            <button type="submit" class="btn btn-primary btn-block">Créer un compte</button>
         </form> <!-- /form -->
     </div> <!-- ./container -->
   
