--- a/VignobleWEB/Pages/Login/SignUp.cshtml
+++ b/VignobleWEB/Pages/Login/SignUp.cshtml
@@ -2,71 +2,70 @@
 @model VignobleWEB.Pages.Login.SignUpModel
 @{
     ViewData["Title"] = "Création de compte";
+    <script src="~/js/SignUp.js" asp-append-version="true"></script>
 
-    <script src="~/js/SingUp.js" asp-append-version="true"></script>
-
-    <div class="container">
-        <form class="form-horizontal" role="form">
+    <form class="form-horizontal" role="form" method="post">
+        <div class="container">
             <h2>Création de compte</h2>
             <div class="form-group">
-                <label for="firstName" class="col-sm-3 control-label">Prénom</label>
+                <label asp-for="customer.CustomerName" class="col-sm-3 control-label">Prénom*</label>
                 <div class="col-sm-9">
-                    <input type="text" id="firstName" placeholder="Prénom" class="form-control" autofocus>
+                    <input type="text" asp-for="customer.CustomerName" id="CustomerName" placeholder="Prénom" class="form-control" autofocus required>
                 </div>
             </div>
             <div class="form-group">
-                <label for="lastName" class="col-sm-3 control-label">Nom</label>
+                <label asp-for="customer.CustomerSurname" class="col-sm-3 control-label">Nom*</label>
                 <div class="col-sm-9">
-                    <input type="text" id="lastName" placeholder="Nom" class="form-control" autofocus>
+                    <input type="text" asp-for="customer.CustomerSurname" id="CustomerSurname" placeholder="Nom" class="form-control" autofocus required>
                 </div>
             </div>
             <div class="form-group">
-                <label for="email" class="col-sm-3 control-label">Email* </label>
+                <label asp-for="user.Email" class="col-sm-3 control-label">Email* </label>
                 <div class="col-sm-9">
-                    <input type="email" id="email" placeholder="Email" class="form-control" name="email">
+                    <input type="email" asp-for="user.Email" id="Email" placeholder="Email" class="form-control" required>
                 </div>
             </div>
             <div class="form-group">
-                <label for="password" class="col-sm-3 control-label">Mot de passe*</label>
+                <label asp-for="Password" class="col-sm-3 control-label">Mot de passe*</label>
                 <div class="col-sm-9">
-                    <input type="password" id="password" placeholder="Mot de passe" class="form-control">
+                    <input type="password" asp-for="Password" id="password" placeholder="Mot de passe" class="form-control" required>
                 </div>
             </div>
             <div class="form-group">
-                <label for="password" class="col-sm-6 control-label">Confirmer le mot de passe*</label>
+                <label asp-for="passwordVerified" class="col-sm-6 control-label">Confirmer le mot de passe*</label>
                 <div class="col-sm-9">
-                    <input type="password" id="password" placeholder="Mot de passe" class="form-control">
+                    <input type="password" asp-for="passwordVerified" id="passwordVerified" onchange="validate()" placeholder="Mot de passe" class="form-control" required>
                 </div>
             </div>
             <div class="form-group">
-                <label for="birthDate" class="col-sm-3 control-label">Anniversaire*</label>
+                <label asp-for="user.BirthDay" class="col-sm-3 control-label">Anniversaire*</label>
                 <div class="col-sm-9">
-                    <input type="date" id="birthDate" class="form-control">
+                    <input type="date" asp-for="user.BirthDay" id="BirthDay" class="form-control" required>
                 </div>
             </div>
             <div class="form-group">
-                <label for="phoneNumber" class="col-sm-3 control-label">Téléphone </label>
+                <label asp-for="customer.PhoneNumber" class="col-sm-3 control-label">Téléphone </label>
                 <div class="col-sm-9">
-                    <input type="phoneNumber" id="phoneNumber" placeholder="Téléphone" class="form-control">
+                    <input type="number" asp-for="customer.PhoneNumber" id="PhoneNumber" placeholder="Téléphone" class="form-control" required>
                     <span class="help-block">Votre numéro de téléphone ne sera pas divulgé </span>
                 </div>
             </div>
             <div class="form-group">
-                <label for="Height" class="col-sm-3 control-label">adresse* </label>
+                <label asp-for="customer.Address" class="col-sm-3 control-label">adresse* </label>
                 <div class="col-sm-9">
-                    <input type="text" id="adresse" placeholder="Veuillez entrer une adresse" class="form-control">
+                    <input type="text" asp-for="customer.Address" id="Address" placeholder="Veuillez entrer une adresse" class="form-control" required>
                 </div>
             </div>
             <div class="form-group">
-                <label for="ville" class="col-sm-3 control-label">Ville* </label>
+                <label asp-for="customer.Town" class="col-sm-3 control-label">Ville* </label>
                 <div class="col-sm-9">
-                    <input type="text" id="ville" placeholder="Ville" class="form-control" name="Ville">
+                    <input type="text" asp-for="customer.Town" id="Town" placeholder="Ville" class="form-control" required>
                 </div>
             </div>
             <div class="form-group">
-                <label for="codepostal" class="col-sm-3 control-label">code postal* </label>
+                <label asp-for="customer.ZipCode" class="col-sm-3 control-label">code postal* </label>
                 <div class="col-sm-9">
-                    <input type="text" id="codepostal" placeholder="code postal" class="form-control">
+                    <input type="text" asp-for="customer.ZipCode" id="ZipCode" placeholder="code postal" class="form-control" required>
                 </div>
             </div>
             <div class="form-group">
@@ -74,13 +73,13 @@
                 <div class="col-sm-6">
                     <div class="row">
                         <div class="col-sm-5">
-                            <label class="radio-inline">
-                                <input type="radio" id="femaleRadio" value="Female">Femme
+                            <label class="radio-inline" asp-for="customer.Gender">
+                                <input type="radio" asp-for="customer.Gender" id="femaleRadio" value="Female">Femme
                             </label>
                         </div>
                         <div class="col-sm-5">
-                            <label class="radio-inline">
-                                <input type="radio" id="maleRadio" value="Male">Homme
+                            <label class="radio-inline" asp-for="customer.Gender">
+                                <input type="radio" asp-for="customer.Gender" id="maleRadio" value="Male">Homme
                             </label>
                         </div>
                     </div>
@@ -88,7 +87,7 @@
             </div>
             <div class="form-group">
                 <label>
-                    <input type="checkbox" id="acceptRules"> 
+                    <input type="checkbox" id="acceptRules">Rules
                 </label>
             </div> <!-- /.form-group -->
             <div class="form-group">
@@ -96,8 +95,8 @@
                     <span class="help-block">*Champs requis</span>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Créer un compte</button>
-        </form> <!-- /form -->
-    </div> <!-- ./container -->
+            <button type="submit" onclick="validate()" class="btn btn-primary btn-block">Créer un compte</button>
+        </div> <!-- ./container -->
+    </form> <!-- /form -->
   
 }
