--- a/VignobleWEB/Pages/Login/SignUp.cshtml
+++ b/VignobleWEB/Pages/Login/SignUp.cshtml
@@ -26,9 +26,9 @@
                 </div>
             </div>
             <div class="form-group">
-                <label asp-for="Password" class="col-sm-3 control-label">Mot de passe*</label>
+                <label asp-for="password" class="col-sm-3 control-label">Mot de passe*</label>
                 <div class="col-sm-9">
-                    <input type="password" asp-for="Password" id="password" placeholder="Mot de passe" class="form-control" required>
+                    <input type="password" asp-for="password" id="password" placeholder="Mot de passe" class="form-control" required>
                 </div>
             </div>
             <div class="form-group">
