--- a/VignobleWEB/Pages/Basket.cshtml
+++ b/VignobleWEB/Pages/Basket.cshtml
@@ -5,6 +5,8 @@
 }
 <h1>@ViewData["Title"]</h1>
 
+<script src="~/js/basket.js" asp-append-version="true"></script>
+
 <section class="h-100 h-custom" style="background-color: #d2c9ff;">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -16,51 +18,60 @@
                                 <div class="p-5">
                                     <div class="d-flex justify-content-between align-items-center mb-5">
                                         <h1 class="fw-bold mb-0 text-black">Panier</h1>
-                                        <h6 class="mb-0 text-muted">3 produits</h6>
+                                        <h6 class="mb-0 text-muted">@Model.nbProduits produits</h6>
                                     </div>
                                     
-                                      
-                                    @foreach (Core.Models.Product product in Model.listProducts)
+                                    @if (Model.listProducts.Count > 0)
                                     {
-                                        <hr class="my-4">
 
-                                        <div class="row mb-4 d-flex justify-content-between align-items-center">
-                                            <div class="col-md-2 col-lg-2 col-xl-2">
-                                                <img src=@product.Image
-                                                 class="img-fluid rounded-3" alt=@product.Name>
-                                            </div>
-                                            <div class="col-md-3 col-lg-3 col-xl-3">
-                                                <h6 class="text-muted">@product.Name</h6>
-                                                <h6 class="text-black mb-0">@product.Description</h6>
-                                            </div>
-                                            <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                                                <button class="btn btn-link px-2"
-                                                    onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                                                    <i class="fas fa-minus"></i>
-                                                </button>
+                                        @foreach (Core.Models.Product product in Model.listProducts)
+                                        {
+                                            <hr class="my-4">
 
-                                                <input id="form1" min="0" name="quantity" value="1" type="number"
-                                                   class="form-control form-control-sm" />
+                                            <div class="row mb-4 d-flex justify-content-between align-items-center">
+                                                <div class="col-md-2 col-lg-2 col-xl-2">
+                                                    <img src=@product.Image
+                                                     class="img-fluid rounded-3" alt=@product.Name>
+                                                </div>
+                                                <div class="col-md-3 col-lg-3 col-xl-3">
+                                                    <h6 class="text-muted">@product.Name</h6>
+                                                    <h6 class="text-black mb-0">@product.Description</h6>
+                                                </div>
+                                                <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
+                                                    <button class="btn btn-link px-2"
+                                                        onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
+                                                        <i class="fas fa-minus"></i>
+                                                    </button>
 
-                                                <button class="btn btn-link px-2"
-                                                    onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                                                    <i class="fas fa-plus"></i>
-                                                </button>
+                                                    <input id="form1" min="0" name="quantity" value="1" type="number"
+                                                       class="form-control form-control-sm" />
+
+                                                    <button class="btn btn-link px-2"
+                                                        onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
+                                                        <i class="fas fa-plus"></i>
+                                                    </button>
+                                                </div>
+                                                <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
+                                                    <h6 class="mb-0">@product.UnitPrice €</h6>
+                                                </div>
+                                                <div class="col-md-1 col-lg-1 col-xl-1 text-end">
+                                                    <a href="#!" class="text-muted"><i class="fas fa-times"></i></a>
+                                                </div>
                                             </div>
-                                            <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                                                <h6 class="mb-0">@product.UnitPrice €</h6>
-                                            </div>
-                                            <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                                                <a href="#!" class="text-muted"><i class="fas fa-times"></i></a>
-                                            </div>
-                                        </div>
+                                        }
+                                    }
+                                    else
+                                    {
+                                        <strong>
+                                            Votre panier est vide !
+                                        </strong>
                                     }
 
                                     <hr class="my-4">
 
                                     <div class="pt-5">
                                         <h6 class="mb-0">
-                                            <a href="#!" class="text-body">
+                                            <a asp-area="" asp-page="Articles/Articles" class="text-body">
                                                 <i class="fas fa-long-arrow-alt-left me-2"></i>Retour
                                             </a>
                                         </h6>
@@ -74,18 +85,13 @@
 
                                     <div class="d-flex justify-content-between mb-4">
                                         <h5 class="text-uppercase">Nombre de produits : @Model.nbProduits</h5>
-                                        <h5>Total :€ 132.00</h5>
+                                        <h5>Total : @Model.prixTotal €</h5>
                                     </div>
 
                                     <h5 class="text-uppercase mb-3">Transports</h5>
 
                                     <div class="mb-4 pb-2">
-                                        <select class="select">
-                                            <option value="1">Standard-Delivery- €5.00</option>
-                                            <option value="2">Prenium- €12.00</option>
-                                            <option value="3">Three</option>
-                                            <option value="4">Four</option>
-                                        </select>
+                                        <select class="form-control" asp-for="carrier.Id" asp-items="@Model.listTransports"></select>
                                     </div>
 
                                     <h5 class="text-uppercase mb-3">Code promo</h5>
@@ -101,7 +107,7 @@
 
                                     <div class="d-flex justify-content-between mb-5">
                                         <h5 class="text-uppercase">Prix total</h5>
-                                        <h5>€ 137.00</h5>
+                                        <h5>@Model.prixTotal + transport</h5>
                                     </div>
 
                                     <button type="button" class="btn btn-dark btn-block btn-lg"
