Ajout fichier JS

--- a/VignobleWEB/Pages/Basket.cshtml
+++ b/VignobleWEB/Pages/Basket.cshtml
@@ -91,7 +91,7 @@
                                     <h5 class="text-uppercase mb-3">Transports</h5>
 
                                     <div class="mb-4 pb-2">
-                                        <select class="form-control" asp-for="carrier.Id" asp-items="@Model.listTransports"></select>
+                                        <select id="idTransport" class="form-control" asp-for="carrier.Id" asp-items="@Model.listTransports"></select>
                                     </div>
 
                                     <h5 class="text-uppercase mb-3">Code promo</h5>
