Création méthode pour créer user

--- a/VignobleWEB/Pages/Shared/_Layout.cshtml
+++ b/VignobleWEB/Pages/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                    </a>
                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                      <a class="dropdown-item" href="#">Se Connecter</a>
-                     <a class="dropdown-item" href="#">Créer un compte</a>
+                     <a class="dropdown-item" asp-area="" asp-page="/Login/SignUp">Créer un compte</a>
 
                    </div>
                 </li>
