--- a/VignobleWEB/Pages/Basket/Basket.cshtml
+++ b/VignobleWEB/Pages/Basket/Basket.cshtml
@@ -1,12 +1,11 @@
 ﻿@page "/panier"
+@using VignobleWEB.Core.Infrastructure.Token
 @model BasketModel
 @{
     ViewData["Title"] = "Panier";
 }
 <h1>@ViewData["Title"]</h1>
-@section Scripts{
-    <script src="~/js/basket.js" asp-append-version="true"></script>
-}
+
 
 <section class="h-100 h-custom" style="background-color: #d2c9ff;">
     <div class="container py-5 h-100">
@@ -21,11 +20,10 @@
                                         <h1 class="fw-bold mb-0 text-black">Panier</h1>
                                         <h6 class="mb-0 text-muted">@Model.nbProduits produits</h6>
                                     </div>
-                                    
+
                                     @if (Model.listProducts.Count > 0)
                                     {
-
-                                        @foreach (Core.Models.Product product in Model.listProducts)
+                                        @foreach (var product in Model.listProducts)
                                         {
                                             <hr class="my-4">
 
@@ -83,39 +81,38 @@
                                 <div class="p-5">
                                     <h3 class="fw-bold mb-5 mt-2 pt-1">Récap</h3>
                                     <hr class="my-4">
-
                                     <div class="d-flex justify-content-between mb-4">
-                                        <h5 class="text-uppercase">Nombre de produits : @Model.nbProduits</h5>
-                                        <h5>Total : @Model.prixTotal €</h5>
+                                        <h5 class="text-uppercase">Nombre de produits : @Model.listProducts.Count</h5>
+                                        <h5>Total : @Model.listProducts.Sum(x => x.UnitPrice) €</h5>
                                     </div>
-
                                     <h5 class="text-uppercase mb-3">Transports</h5>
-
-                                    <div class="mb-4 pb-2">
-                                        <select id="idTransport" class="form-control" asp-for="carrier.Id" asp-items="@Model.listTransports"></select>
-                                    </div>
-
+                                    @* <div class="mb-4 pb-2"> *@
+                                    @*     <select id="idTransport" class="form-control" asp-for="transport.Id" asp-items="@Model.listTransports"></select> *@
+                                    @* </div> *@
+                                    @Html.DropDownList("Transport", Model.listTransports)
+                                   <select class="form-control" id="dropdown-transports" name="Transport.Id">
+                                       <option value="">Choisissez une option de livraison</option>
+                                       @foreach (var transport in Model.listTransports)
+                                       {
+                                           <option value="@transport.Id" data-price="@transport.Price">@transport.Name</option>
+                                       }
+                                   </select>
                                     <h5 class="text-uppercase mb-3">Code promo</h5>
-
                                     <div class="mb-5">
                                         <div class="form-outline">
                                             <input type="text" id="form3Examplea2" class="form-control form-control-lg" />
                                             <label class="form-label" for="form3Examplea2">Entrez un code promo</label>
                                         </div>
                                     </div>
-
                                     <hr class="my-4">
-
                                     <div class="d-flex justify-content-between mb-5">
                                         <h5 class="text-uppercase">Prix total</h5>
-                                        <h5>@Model.prixTotal + transport</h5>
+                                        <h5 id="total-price">@Model.prixTotal €</h5>
                                     </div>
-
                                     <button type="button" class="btn btn-dark btn-block btn-lg"
                                             data-mdb-ripple-color="dark">
                                         Valider
                                     </button>
-
                                 </div>
                             </div>
                         </div>
@@ -127,3 +124,36 @@
 </section>
 
 
+<script type="text/javascript">
+ $(document).ready(function() {
+    $('#dropdown-transports').change(function() {
+      let selectedOption = $(this).find('option:selected');
+      let additionalPrice = parseFloat(selectedOption.data('price'));
+
+      if (!isNaN(additionalPrice)) {
+        let totalPrice = @Model.prixTotal + additionalPrice;
+        $('#total-price').text(totalPrice.toFixed(2) + ' €');
+      }
+    });
+  });
+    //
+    // let accessToken = '@TokenManager.Instance.GetToken();';
+    //
+    // $.ajax({
+    //     url: '/api/transportation',
+    //     type: 'GET',
+    //     contentType: 'application/json',
+    //     data: JSON.stringify({
+    //         // Your data here
+    //     }),
+    //     headers: {
+    //         'Authorization': 'Bearer ' + accessToken
+    //     },
+    //     success: function(response) {
+    //         // Handle success
+    //     },
+    //     error: function(xhr, status, error) {
+    //         // Handle error
+    //     }
+    // });
+</script>
