--- a/VignobleWEB/Pages/Basket/Basket.cshtml
+++ b/VignobleWEB/Pages/Basket/Basket.cshtml
@@ -1,6 +1,5 @@
-﻿@page "/panier"
+﻿@page "/Basket"
 @using System.Globalization
-@using VignobleWEB.Core.Models
 @model BasketModel
 @{
     ViewData["Title"] = "Panier";
