--- a/VignobleWEB/Pages/Shared/_Layout.cshtml
+++ b/VignobleWEB/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"  />
@@ -10,36 +10,39 @@
     <link rel="stylesheet" href="~/VignobleWEB.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">STIVE</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="Articles/Articles">Article</a>
-                        </li>
-                    </ul>
-                    <a asp-area="" asp-page="/Basket">
-                        <img class="litlesize" src="img/basket.png" />
-                    </a>
-                </div>
-                <div class="conteneur">
-                    <img class="litlesize Image" src="img/user.png" alt="Image" />
-                    <div class="menu">
-                        <ul>
-                            <li><a href="#">Se connecter</a></li>
-                            <li><a href="#">Créer un compte</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </header>
+ <header>
+      <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+          <div class="container">
+              <a class="navbar-brand" asp-area="" asp-page="/Index">STIVE</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                      aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="navbar-collapse collapse d-sm-inline-flex">
+                  <ul class="navbar-nav flex-grow-1">
+                      <li class="nav-item">
+                          <a class="nav-link text-dark" asp-area="" asp-page="Articles/Articles">Article</a>
+                      </li>
+                  </ul>
+              </div>
+              <div>
+                  <a asp-area="" asp-page="Basket/Basket"><img class="litlesize" src="img/basket.png" alt="panier"/></a>
+              </div>
+                   <!-- Dropdown Menu Here -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <img class="litlesize Image" src="img/user.png" alt="Image"/>
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="#">Se Connecter</a>
+                            <a class="dropdown-item" href="#">Créer un compte</a>
+                        </div>
+                    </li>
+                    <!-- Other Menu Items Here -->
+              </div>
+      </nav>
+  </header>
+
 
     <div class="container">
         <main role="main" class="pb-3">
@@ -53,10 +56,10 @@
         </div>
     </footer>
 
+    <script crossorigin="anonymous" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script crossorigin="anonymous" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
