--- a/VignobleWEB/Pages/Account/Manage/ChangePassword.cshtml
+++ b/VignobleWEB/Pages/Account/Manage/ChangePassword.cshtml
@@ -4,6 +4,14 @@
     ViewData["Title"] = "Changer le mot de passe";
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
+@section Scripts {
+        <script src="~/js/gestionMessageModal.js" asp-append-version="true"></script>
+        <partial name="_ValidationScriptsPartial" />
+}
+@if (Model.MessagePourLaModal != null && Model.MessagePourLaModal.Message != string.Empty)
+{
+    Html.RenderPartial("./VuePartielle/Message", Model.MessagePourLaModal);
+}
 
 <h3>@ViewData["Title"]</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
@@ -30,7 +38,3 @@
         </form>
     </div>
 </div>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
