--- a/VignobleWEB/Pages/Articles/Articles.cshtml
+++ b/VignobleWEB/Pages/Articles/Articles.cshtml
@@ -1,5 +1,12 @@
 ﻿@page "/Articles"
 @model VignobleWEB.Pages.Articles.ArticlesModel
+@section Scripts {
+            <script src="~/js/gestionMessageModal.js" asp-append-version="true"></script>
+}
+@if (Model.MessagePourLaModal != null && Model.MessagePourLaModal.Message != string.Empty)
+{
+    Html.RenderPartial("./VuePartielle/Message", Model.MessagePourLaModal);
+}
 @{
     ViewData["Title"] = "Articles";
 
