--- a/VignobleWEB/Pages/Account/Manage/Email.cshtml
+++ b/VignobleWEB/Pages/Account/Manage/Email.cshtml
@@ -4,7 +4,14 @@
     ViewData["Title"] = "Gérer mail";
     ViewData["ActivePage"] = ManageNavPages.Email;
 }
-
+@section Scripts {
+        <script src="~/js/gestionMessageModal.js" asp-append-version="true"></script>
+        <partial name="_ValidationScriptsPartial" />
+}
+@if (Model.MessagePourLaModal != null && Model.MessagePourLaModal.Message != string.Empty)
+{
+    Html.RenderPartial("./VuePartielle/Message", Model.MessagePourLaModal);
+}
 <h3>@ViewData["Title"]</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
@@ -38,7 +45,3 @@
         </form>
     </div>
 </div>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
