--- a/VignobleWEB/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/VignobleWEB/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -4,6 +4,14 @@
     ViewData["Title"] = "Supprimer les données personnelles";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
+@section Scripts {
+        <script src="~/js/gestionMessageModal.js" asp-append-version="true"></script>
+        <partial name="_ValidationScriptsPartial" />
+}
+@if (Model.MessagePourLaModal != null && Model.MessagePourLaModal.Message != string.Empty)
+{
+    Html.RenderPartial("./VuePartielle/Message", Model.MessagePourLaModal);
+}
 
 <h3>@ViewData["Title"]</h3>
 
@@ -27,7 +35,3 @@
         <button class="w-100 btn btn-lg btn-danger" type="submit">Supprimer les données et fermer mon compte</button>
     </form>
 </div>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
