--- a/VignobleWEB/Pages/Basket/Basket.cshtml
+++ b/VignobleWEB/Pages/Basket/Basket.cshtml
@@ -36,7 +36,7 @@
 
                                             <div class="row mb-4 d-flex justify-content-between align-items-center">
                                                 <div class="col-md-2 col-lg-2 col-xl-2">
-                                                    <img src=@product.Image
+                                                    <img src="data:image/png;base64,@product.Picture.Content"
                                                          class="img-fluid rounded-3" alt=@product.Name>
                                                 </div>
                                                 <div class="col-md-3 col-lg-3 col-xl-3">
