--- a/VignobleWEB/Pages/Articles/Articles.cshtml
+++ b/VignobleWEB/Pages/Articles/Articles.cshtml
@@ -20,7 +20,7 @@
                         <div class="card h-100 shadow-sm">
                         @if (item.Picture != null)
                         {
-                            <img src="data:image/png;base64,@item.Picture.Content" class="card-img-top" alt="...">
+                            <img src="data:image/png;base64,@item.Picture.ContentMini" class="card-img-top" alt="...">
                         }
                         else
                         {
