--- a/VignobleWEB/Pages/Shared/_Layout.cshtml
+++ b/VignobleWEB/Pages/Shared/_Layout.cshtml
@@ -13,48 +13,62 @@
     <link rel="stylesheet" href="~/css/Register.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/basket.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/VignobleWEB.styles.css" asp-append-version="true" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
 </head>
 <body>
- <header>
-      <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-          <div class="container">
-              <a class="navbar-brand" asp-area="" asp-page="/Index">STIVE</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                      aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="navbar-collapse collapse d-sm-inline-flex">
-                  <ul class="navbar-nav flex-grow-1">
-                      <li class="nav-item">
-                          <a class="nav-link text-dark" asp-area="" asp-page="/Articles/Articles">Article</a>
-                      </li>
-                  </ul>
-              </div>
-              <div>
-                  <a asp-area="" asp-page="/Basket/Basket"><img class="litlesize" src="/img/basket.png" alt="panier"/></a>
-              </div>
-              @if (SignInManager.IsSignedIn(User))
-              {
-                <div>
-                   <!-- Dropdown Menu Here -->
+<header>
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <div class="container">
+            <a class="navbar-brand" asp-area="" asp-page="/Index">STIVE</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+                <ul class="navbar-nav">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img class="litlesize Image" src="/img/user.png" alt="Image"/>
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Articles
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" asp-area="" asp-page="/Account/Manage/Index">Mon compte</a>
-                            <a class="dropdown-item" asp-area="" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" asp-page="/Account/Logout">Se déconnecter</a>
-                        </div>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" asp-area="" asp-page="/Articles/Articles">Tous les produits</a></li>
+                            <li><hr class="dropdown-divider" /></li>
+                            <li><a class="dropdown-item" href="#!">Popular Items</a></li>
+                            <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                        </ul>
                     </li>
-                    <!-- Other Menu Items Here -->
-                    </div>
-                }
-                else
-                {    
-                    <div>
-                       <!-- Dropdown Menu Here -->
+                </ul>
+            </div>
+
+            <div>
+                <button class="btn btn-outline-dark" type="submit">
+                    <i class="bi-cart-fill me-1"></i>
+                    Cart
+                    <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                </button>
+            </div>
+            @if (SignInManager.IsSignedIn(User))
+            {
+                <div id="navbarNavDarkDropdown">
+                    <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <img class="litlesize Image" src="/img/user.png" alt="Image"/>
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" asp-area="" asp-page="/Account/Manage/Index">Mon compte</a>
+                                <a class="dropdown-item" asp-area="" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" asp-page="/Account/Logout">Se déconnecter</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>   
+            }
+            else
+            {    
+                <div id="navbarNavDarkDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <img class="litlesize Image" src="/img/user.png" alt="Image"/>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -62,12 +76,12 @@
                                 <a class="dropdown-item" asp-area="" asp-page="/Account/Register">Créer un compte</a>
                             </div>
                         </li>
-                        <!-- Other Menu Items Here -->
-                    </div>
-                }
-          </div>
-      </nav>
-  </header>
+                    </ul>
+                </div>
+            }
+            </div>
+        </nav>
+</header>
 
 
     <div class="container">
@@ -85,7 +99,9 @@
     <script crossorigin="anonymous" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/navbar.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
