--- a/VignobleWEB/Pages/Articles/Details.cshtml
+++ b/VignobleWEB/Pages/Articles/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@page "/Articles/Details/{idReference:guid}"
 @model VignobleWEB.Pages.Articles.DetailsModel
 @section Scripts {
-                <script src="~/js/gestionMessageModal.js" asp-append-version="true"></script>
+    <script src="~/js/gestionMessageModal.js" asp-append-version="true"></script>
 }
 @if (Model.MessagePourLaModal != null && Model.MessagePourLaModal.Message != string.Empty)
 {
     Html.RenderPartial("./VuePartielle/Message", Model.MessagePourLaModal);
 }
-<section class="py-5">
+<form class="py-5" method="post">
     <div class="container px-4 px-lg-5 my-5">
         <div class="row gx-4 gx-lg-5 align-items-center">
             <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="data:image/png;base64,@Model.ProductDetails.Picture.Content" alt="..." /></div>
@@ -20,16 +20,17 @@
                 </div>
                 <p class="lead">@Model.ProductDetails.Description</p>
                 <div class="d-flex">
-                    <input class="form-control text-center me-3" id="inputQuantity" type="number" value="1" style="max-width: 3rem" />
-                    <button class="btn btn-outline-dark flex-shrink-0" type="button">
+                    <input asp-for="@Model.CardItem.IdProduct" value="@Model.ProductDetails.Id" hidden/>
+                    <input class="form-control text-center me-3" id="inputQuantity" type="number" asp-for="@Model.CardItem.Quantity" value="1" style="max-width: 3rem" />
+                    <button class="btn btn-outline-dark flex-shrink-0" type="submit" >
                         <i class="bi-cart-fill me-1"></i>
-                        Add to cart
+                        Ajouter au panier
                     </button>
                 </div>
             </div>
         </div>
     </div>
-</section>
+</form>
 
  <section class="py-5 bg-light">
     <div class="container px-4 px-lg-5 mt-5">
