--- a/VignobleWEB/Pages/Basket/Basket.cshtml
+++ b/VignobleWEB/Pages/Basket/Basket.cshtml
@@ -6,6 +6,7 @@
 }
 @section Scripts {
         <script src="~/js/gestionMessageModal.js" asp-append-version="true"></script>
+        <script src="~/js/Basket.js" asp-append-version="true"></script>
 }
 @if (Model.MessagePourLaModal != null && Model.MessagePourLaModal.Message != string.Empty)
 {
@@ -25,45 +26,72 @@
                                 <div class="p-5">
                                     <div class="d-flex justify-content-between align-items-center mb-5">
                                         <h1 class="fw-bold mb-0 text-black">Panier</h1>
-                                        <h6 class="mb-0 text-muted">@Model.nbProduits produits</h6>
+                                        <h6 class="mb-0 text-muted">@Model.nbProduits produit(s)</h6>
                                     </div>
 
                                     @if (Model.listProducts.Count > 0)
                                     {
+                                        int i = 0;
+
                                         @foreach (var product in Model.listProducts)
                                         {
                                             <hr class="my-4">
 
                                             <div class="row mb-4 d-flex justify-content-between align-items-center">
                                                 <div class="col-md-2 col-lg-2 col-xl-2">
-                                                    <img src="data:image/png;base64,@product.Picture.ContentMini"
+                                                    <img src="data:image/png;base64,@product.Picture.Content"
                                                          class="img-fluid rounded-3" alt=@product.Name>
                                                 </div>
                                                 <div class="col-md-3 col-lg-3 col-xl-3">
                                                     <h6 class="text-muted">@product.Name</h6>
-                                                    <h6 class="text-black mb-0">@product.Description</h6>
                                                 </div>
-                                                <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                                                    <button class="btn btn-link px-2"
+                                                <div class="col-md-2 col-lg-2 col-xl-2 d-flex" style="margin-right: 60px;">
+                                                    <button class="btn btn-link"
                                                             onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
                                                         <i class="fas fa-minus"></i>
                                                     </button>
+                                                    @foreach (var item in Model.listCardItems)
+                                                    {
+                                                        if(product.Id.ToString() == item.IdProduct)
+                                                        {
+                                                            <input id="Quantity_@i" min="0" value="@item.Quantity" type="number"
+                                                               class="form-control form-control-sm inputClass" />
+                                                        }
+                                                    }
 
-                                                    <input id="form1" min="0" name="quantity" value="1" type="number"
-                                                           class="form-control form-control-sm"/>
-
-                                                    <button class="btn btn-link px-2"
+                                                    <button class="btn btn-link" 
                                                             onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
                                                         <i class="fas fa-plus"></i>
                                                     </button>
                                                 </div>
-                                                <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                                                    <h6 class="mb-0">@product.UnitPrice €</h6>
+
+                                                <div class="col-md-3 col-lg-3 col-xl-4">
+                                                    <div class="row">
+                                                        <div class="col-xl-5">
+                                                            <h6 class="text-black">Prix unitaire :</h6>
+                                                            <h6 class="text-muted mb-0">@product.UnitPrice €</h6>
+                                                        </div>
+
+                                                        <div class="col-xl-5">
+                                                            <h6 class="text-black">Prix total :</h6>
+                                                            <h6 class="text-muted mb-0">
+                                                                @{
+                                                                    double priceProduct = Model.listCardItems[i].Quantity * Model.listProducts[i].UnitPrice;
+                                                                } @priceProduct €
+                                                            </h6>
+                                                            <input id="totalPriceProduct_@i" value="@priceProduct" hidden/>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                                <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                                                    <a href="#!" class="text-muted"><i class="fas fa-times"></i></a>
+                                                
+                                                <div class="col-md-1 col-lg-1 col-xl-1">
+                                                    <a>
+                                                        <img src="/img/Supprimer.png" style="width: 32px;" alt="logo" id="btnSupp[@i]">
+                                                        <input id="listProducts[@i].Id" value="@product.Id" hidden />
+                                                    </a>
                                                 </div>
                                             </div>
+                                            i++;
                                         }
                                     }
                                     else
@@ -74,10 +102,10 @@
                                     }
 
                                     <hr class="my-4">
-
+                                    
                                     <div class="pt-5">
                                         <h6 class="mb-0">
-                                            <a asp-area="" asp-page="Articles/Articles" class="text-body">
+                                            <a asp-area="" asp-page="/Articles/Articles" class="text-body">
                                                 <i class="fas fa-long-arrow-alt-left me-2"></i>Retour
                                             </a>
                                         </h6>
@@ -89,16 +117,22 @@
                                     <h3 class="fw-bold mb-5 mt-2 pt-1">Récap</h3>
                                     <hr class="my-4">
                                     <div class="d-flex justify-content-between mb-4">
-                                        <h5 class="text-uppercase">Nombre de produits : @Model.listProducts.Count</h5>
-                                        <h5>Total : @Model.listProducts.Sum(x => x.UnitPrice) €</h5>
+                                        <h5>Nombre d'article(s) : @Model.nbProduitsTotal</h5>
                                     </div>
-                                    <h5 class="text-uppercase mb-3">Transports</h5>
-                                    @Html.DropDownList("Id", Model.listSelectedTransports, "Choisissez une option de livraison", new { @class = "form-control", id = "dropdown-transports" })
-                                    <h5 class="text-uppercase mb-3">Code promo</h5>
+                                     <div class="d-flex justify-content-between mb-4">
+
+                                        <h5 id="totalPriceWithOutTransports"></h5>
+                                    </div>
+                                    <h5 class="mb-3">Transports</h5>
+                                   
+                                    <select class="form-control" id="dropdown-transports" asp-items="Model.listSelectedTransports"></select>
+
+                                    <h5 class="mb-3">Code promo</h5>
                                     <div class="mb-5">
                                         <div class="form-outline">
-                                            <input type="text" id="form3Examplea2" class="form-control form-control-lg"/>
+                                            <input type="text" id="discountValue" class="form-control form-control-lg"/>
                                             <label class="form-label" for="form3Examplea2">Entrez un code promo</label>
+                                            <button id="btn-discount" class="btn btn-secondary" >Valider le code promo</button>
                                         </div>
                                     </div>
                                     <hr class="my-4">
@@ -123,36 +157,3 @@
     var productTotal = Model.listProducts.Sum(x => x.UnitPrice).ToString("0.00", CultureInfo.InvariantCulture);
     var token = Model.Token;
 }
-<script type="text/javascript">
-$(document).ready(function() {
-    let productTotalJs = parseFloat('@productTotal');
-    let tokenJs = '@token';
-
-    $('select#dropdown-transports').change(function (event) {
-                let selectedOption = $(this).find(":selected");
-                let idTransport = parseInt(selectedOption.val());
-         $.ajax({
-                url: `http://82.165.237.163:5000/api/transport/${$(this).val()}`,
-                type: 'GET',
-                headers : {
-                  'Authorization':'Bearer ' + tokenJs
-                },
-                dataType: 'json',
-                contentType: 'application/json',
-                success: function(transportData) {
-                        let transportPrice = parseFloat(transportData.price);
-
-                        if (!isNaN(transportPrice) && !isNaN(productTotalJs)) {
-                                const totalPrice = productTotalJs + transportPrice;
-                                $('#total-price').text(totalPrice.toFixed(2) + ' €');
-                            } else {
-                                console.error('One of the values is NaN', {productTotalJs, transportPrice});
-                            }
-                },
-                error: function(xhr, status, error) {
-                    console.error(error);
-                }
-            });
-    });
-});
-</script>
